# rinha-de-backend-imp-2025

./: .env  .gitignore  CLAUDE.md  CONFIGURATION_IMPROVEMENTS.md  Cargo.toml  Dockerfile  IMMEDIATE_FIXES.md  IMPROVEMENTS.md  INSTRUCOES.md  Makefile  PR_REVIEW_SUGGESTIONS.md  README.Docker.md  README.md  api_main_improved.rs  conftest.py  docker-compose.test.yml  docker-compose.yml  info.json  init.sql  load-tests.sh  main.py  nginx.conf  partial-results.json  payment_worker_improved.rs  plan.md  postgres.conf  profile.sh  pyproject.toml  pytest.ini  requirements.txt  run-tests.sh  tdd-plan.md  test-todo.md  test.sh  test_api_uuid.sh  test_improvements.sh  todo.md
api/: Cargo.toml  Dockerfile
api/src/: main.rs
health-checker/: Cargo.toml  Dockerfile  README.Docker.md
health-checker/benches/: health_check_bench.rs
health-checker/src/: config.rs  health_monitor.rs  health_storage.rs  http_client.rs  lib.rs  main.rs  redis_client.rs
health-worker/: Cargo.toml  Dockerfile  README.md
health-worker/src/: main.rs
payment-worker/: Cargo.toml  Dockerfile  README.md  docker-compose.test.yml
payment-worker/src/: config.rs  main.rs
profiling-results/: bottleneck_analysis.md  connection_stats.txt  container_stats.txt  database_stats.txt  load_test_results.txt  performance_baseline_report.md  summary_response.json
rinha-test/: README.md  partial-results.json  report.html  rinha.js
src/: api.py  factories.py  health_check.py  main.rs  models.py  services.py
src/adapters/: __init__.py  cache.py  http.py  redis_client.py  storage.py
src/config/: logging.py
src/domain/: __init__.py  background_worker.py  health_check.py  models.py  payment_worker.py  protocols.py  queue_manager.py  services.py
tests/: conftest.py  test_app.py  test_background_health_service.py  test_background_worker.py  test_health_check_client.py  test_payment_endpoints.py  test_payment_request.py  test_payment_service.py  test_payment_worker.py  test_queue_manager.py  test_redis_queue.py  test_redis_storage.py
