[project]
name = "rinha-de-backend-imp-2025"
version = "0.1.0"
description = "Payment processing intermediary for Rinha de Backend 2025"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.2",
    "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1"
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
