[package]
name = "api"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
rsmq_async = "15.0"
uuid = { version = "1", features = ["v4", "serde"], default-features = false }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "bigdecimal"], default-features = false }
axum = { version = "0.8.4" }
chrono = { version = "0.4.41", features = ["serde"] }
redis = "0.32.4"
