[package]
name = "health-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
redis = { version = "0.32.4", features = ["tokio-comp"] }
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.22", features = ["json"] }
async-trait = "0.1.77"
criterion = { version = "0.5", features = ["html_reports"] }
thiserror = "2.0.12"

[[bench]]
name = "health_check_bench"
harness = false
