[package]
name = "payment-worker"
version = "0.1.0"
edition = "2021"

[features]
default = []
console = ["tokio-console", "tokio/tracing"]

[dependencies]
tokio = { version = "1.45.1", features = ["full", "tracing"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pgmq = "0.30.1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio-console = { version = "0.1", optional = true }

